--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="gustos, particularidades, Rocio, personalidad">
+    <meta name="descriptions" content="Página oficial sobre la vida de Rocío Fernández">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Kalam&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Sobre mi</title>
 </head>
 
@@ -40,20 +42,30 @@
                 </li>
             </ul>
         </nav>
-        
-        <h2>Lo que me gusta</h2>
-        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi beatae amet necessitatibus alias cupiditate fuga iusto ratione iure nisi vitae eum, perferendis error quo maiores, veritatis est, laboriosam tenetur. Quasi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore tempore tenetur reiciendis obcaecati corrupti omnis, fugit rerum dolore eveniet sit porro corporis sunt error velit facilis et cumque aperiam ratione? </p>
 
-        <div>
-            <img class="formatoFoto" src="../img/gato.jpg" alt="Imagen de gatito">
-        </div>
+        <section class="mainSobremi">
+            <h2>Lo que me gusta</h2>
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi beatae amet necessitatibus alias
+                cupiditate fuga iusto ratione iure nisi vitae eum, perferendis error quo maiores, veritatis est,
+                laboriosam tenetur. Quasi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore tempore
+                tenetur reiciendis obcaecati corrupti omnis, fugit rerum dolore eveniet sit porro corporis sunt error
+                velit facilis et cumque aperiam ratione? </p>
 
-        <h2>Lo que NO me gusta</h2>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos corporis libero at veritatis vel, rem recusandae quaerat, voluptatum quis dolores sit numquam reiciendis dolor quos sequi velit distinctio maxime a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quos similique nam libero, quo incidunt illum dolores facilis eum. Soluta dolorem, sed quo incidunt quisquam voluptates minima voluptatum ullam veniam!</p>
+            <div>
+                <img class="formatoFoto" src="../img/gato.jpg" alt="Imagen de gatito">
+            </div>
 
-        <div>
-            <img class="formatoFoto" src="../img/gato.jpg" alt="Imagen de gatito">
-        </div>
+            <h2>Lo que NO me gusta</h2>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos corporis libero at veritatis vel,
+                rem recusandae quaerat, voluptatum quis dolores sit numquam reiciendis dolor quos sequi velit distinctio
+                maxime a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quos similique nam libero, quo
+                incidunt illum dolores facilis eum. Soluta dolorem, sed quo incidunt quisquam voluptates minima
+                voluptatum ullam veniam!</p>
+
+            <div>
+                <img class="formatoFoto" src="../img/gato.jpg" alt="Imagen de gatito">
+            </div>
+        </section>
     </main>
 
     <footer>
